# synapse-flow

./: README.md  main.py  pyproject.toml
static/: style.css
templates/: index.html
