[project]
name = "calendar-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.63.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
]
